fix: legal hold indicators are misaligned

--- a/src/style/components/legal-hold-dot.less
+++ b/src/style/components/legal-hold-dot.less
@@ -28,21 +28,25 @@
 .legal-hold-dot {
   position: relative;
   display: flex;
-  width: 16px;
-  height: 16px;
+  width: 12px;
+  height: 12px;
   align-items: center;
   justify-content: center;
   background-color: rgba(@w-red, 0.24);
   border-radius: 50%;
 
   &--interactive {
-    margin-right: 8px;
     cursor: pointer;
   }
 
   &--large {
     width: 48px;
     height: 48px;
+  }
+
+  &--message {
+    width: 16px;
+    height: 16px;
   }
 
   &--active::after {
@@ -52,6 +56,12 @@
     background-color: @w-red;
     border-radius: 50%;
     content: '';
+  }
+
+  &--text {
+    margin-left: 6px;
+    font-size: 11px;
+    line-height: 13px;
   }
 
   pending-icon,
